Spacing fix.

--- a/lightsout.css
+++ b/lightsout.css
@@ -120,7 +120,7 @@ section.text {
   position: absolute;
   background: #c4c4c4;
   width: 50%;
-  height: 31%;
+  height: 32%;
   top: 0;
   right: 0;
   bottom: 0;
